--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -432,7 +432,8 @@ footer .container {
 }
 
 footer p,
-footer a {
+footer a
+ {
     color: white;
 }
 
@@ -442,4 +443,11 @@ footer .social-icons a {
 
 footer .social-icons a:not(:last-child) {
     margin-right: 24px;
+}
+.ceo-mubashar{
+    margin-left: 9.8%;
+}
+
+.ceo-mubashar a{
+    color: #fac562;
 }
