--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -451,3 +451,30 @@ footer .social-icons a:not(:last-child) {
 .ceo-mubashar a{
     color: #fac562;
 }
+
+
+.watsapp-btn{
+    background-color: #05b65d;
+    padding-top: 10px;
+    padding-bottom: 10px;
+   padding-right: 20px;
+    padding-left: 20px;
+    color: white;
+    font-weight: 700;
+    border: 2px #05b65d;
+border-radius: 30px;
+transition: all 0.4s ease-in-out;
+
+}
+
+.watsapp-btn:hover{
+    background-color:white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+   padding-right: 20px;
+    padding-left: 20px;
+    color:#05b65d;
+    font-weight: 700;
+    border: 2px solid #05b65d;
+border-radius: 30px;
+}
